--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+/*
+* CS 3744 Fall 2023
+* Project 1
+* App CSS source code
+*
+* Author: Shreya Ashok Kumar
+* Version: 1.0
+*/
+
+.body-box {
+    position: relative;
+    height: 75%;
+    width: 96%;
+    top: 2%;
+    left: 2%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.comp-box {
+    border: 1px solid black;
+    position: relative;
+    width: 98%;
+    border-radius: 5px;
+    height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
